# safeyolo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  DOCKER.md  Dockerfile  README.md  SECURITY-AUDIT.md  SECURITY.md  __init__.py  agent-collaboration-plumb.md  agent-principal-identity.md  audit_schema.py  bunfig.toml  deno.jsonc  docker-compose.override.yml.example  docker-compose.yml  package.json  project-memory-distillation.md  pyproject.toml  renovate.json  requirements.txt  ruff.toml
.clusterfuzzlite/: Dockerfile  build.sh  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yml
addons/: __init__.py  access_control.py  admin_api.py  admin_shield.py  agent_api.py  agent_relay.py  audit_writer.py  base.py  budget_tracker.py  circuit_breaker.py  config_cache.py  credential_guard.py  credential_guard_full.py  file_logging.py  flow_cache.py  flow_pruner.py  flow_recorder.py  flow_store.py  flow_writer.py  list_loader.py  loop_guard.py  memory_monitor.py  metrics.py  network_guard.py  pattern_scanner.py  pid_writer.py  policy.py  policy_compiler.py  policy_engine.py  policy_loader.py  prompt_injection.py  proxy_protocol.py  rate_limiter.py  request_id.py  request_logger.py  sensor_utils.py  service_discovery.py  service_gateway.py  service_loader.py  sse_streaming.py  (+8 more)
cli/: README.md  pyproject.toml
cli/src/safeyolo/: __init__.py  _tactics.py  agent_diag.py  agents_store.py  api.py  audit_schema.py  cli.py  config.py  discovery.py  docker.py  events.py  firewall.py  guest-diag.py  guest-init-per-run.sh  guest-init-static.sh  guest-init.sh  guest-proxy-forwarder.py  guest-proxy-forwarder.sh  guest-shell-bridge.py  guest-shell-bridge.sh  preview.py  proxy.py  proxy_bridge.py  proxy_protocol_header.py  snapshot.py  sockets.py  timing.py  uds.py  uds.toml  vm.py
cli/src/safeyolo/commands/: __init__.py  _oauth2_flow.py  _service_discovery.py  _token_ops.py  admin.py  agent.py  cert.py  demo.py  doctor.py  init.py  lifecycle.py  logs.py  mount.py  policy.py  policy_egress.py  policy_host.py  policy_list.py  sandbox.py  secure.py  services.py  setup.py  tmux.py  token.py  vault.py  watch.py
cli/src/safeyolo/core/: audit_schema.py  audit_writer.py  base.py  config_cache.py  flow_writer.py  plumb_service.py  sensor_utils.py  service_loader.py  utils.py  vault.py
cli/src/safeyolo/detection/: credentials.py  matching.py  patterns.py
cli/src/safeyolo/mitm_addons/: admin_api.py  agent_api.py  bootstrap_mode.py  circuit_breaker.py  credential_guard.py  file_logging.py  flow_recorder.py  loop_guard.py  memory_monitor.py  metrics.py  network_guard.py  pattern_scanner.py  policy_engine.py  request_id.py  request_logger.py  service_discovery.py  service_gateway.py  service_loader.py  sse_streaming.py  test_context.py
cli/src/safeyolo/notify/: __init__.py
cli/src/safeyolo/platform/: __init__.py  darwin.py  linux.py
cli/src/safeyolo/policy/: budget_tracker.py  compiler.py  engine.py  list_loader.py  loader.py  toml_normalize.py  toml_roundtrip.py
cli/src/safeyolo/templates/: __init__.py  addons.yaml  apparmor-safeyolo-runsc  baseline.yaml  loader.py  policy.toml  policy.yaml  safeyolo-linux.sudoers  safeyolo.sudoers  ufw-safeyolo
cli/src/safeyolo/templates/agents/byoa/: README.md  agent.toml  instructions.md
cli/src/safeyolo/templates/agents/claude-code/: .env.example  README.md  agent.toml  docker-compose.yml.j2  instructions.md  safeyolo-init.sh.j2
cli/src/safeyolo/templates/agents/openai-codex/: .env.example  Dockerfile  README.md  agent.toml  docker-compose.yml.j2  safeyolo-init.sh.j2
cli/src/safeyolo/templates/compose/: safeyolo.yml.j2
cli/src/safeyolo/templates/lists/: package-registries.txt
cli/tests/: __init__.py  conftest.py  test_agent_authorize.py  test_agent_lifecycle.sh  test_agent_ports.py  test_agent_preview.py  test_agents_store.py  test_api.py  test_commands.py  test_commands_vm.py  test_config.py  test_discovery.py  test_docker.py  test_doctor.py  test_events.py  test_firewall.py  test_firewall_rules.sh  test_input_validation.py  test_lifecycle_integration.py  test_linux_platform_oci.py  test_migrate_policy.py  test_mount.py  test_policy_cli.py  test_policy_show.py  test_proxy.py  test_service_discovery_cli.py  test_setup_pf.py  test_snapshot.py  test_sockets.py  test_sudoers_integration.sh  test_sudoers_linux_template.py  test_sudoers_template.py  test_templates.py  test_token_commands.py  test_vault_cli.py  test_vm.py  test_watch.py  test_watch_actions.py
cli/tests/uds-networking/: bypass_test.py  connect_uds.py  container_uds_forwarder.py  curl_via_proxy_test.py  dns_test.py  guest_proxy_forwarder.py  host_uds_bridge.py  http_test.py  mini_proxy.py  test_linux_new_arch.sh  test_multi_agent_attribution.sh  test_proxy_bridge.sh  test_real_proxy.sh  test_uds_networking.sh
cockpit/: agents.md  agents.scope.md
config/: baseline-extended.yaml.example  baseline.yaml  credential_guard.yaml  credential_rules.json  policy.yaml  quiet_hosts.yaml  rate_limits.json  safe_headers.yaml  services.yaml.example
console/: agents.scope.md
console-ui/: agents.scope.md
contrib/: HOST_SCRIPT_GUIDE.md  README.md  ROOTFS_SCRIPT_GUIDE.md  claude-host-setup.sh  codex-host-setup.sh  mise-shell-host-setup.sh
dagger/: AGENTS.md  README.md  dagger.json  package.json
docs/: ADDONS.md  AGENTS.md  ARCHITECTURE.md  AUDIT_FINDINGS.md  CODE_REVIEW.md  CONFIGURATION.md  DEVELOPERS.md  DOCKER_CHOKEPOINT.md  FUTURE.md  SANDBOX_MODE.md  SECURE_MODE.md  SECURITY.md  SERVICE_DISCOVERY.md  TLS_CERTIFICATE.md  agent-preview-design.md  bb-nightly-design.md  blackbox-coverage.md  blackbox-test-harness-implementation.md  blackbox-test-harness-plan.md  credential-guard-v2-design.md  credential-guard-v2-implementation-plan.md  design-api-capability-contracts.md  design-capability-contracts.md  integration-test-plan.md  linux-port-design.md  microvm-architecture.md  networking-vsock-uds.md  plan-submission-design.md  prompt-injection-classifier-evaluation.md  safeyolo-cli-design.md  safeyolo-cli-implementation-plan.md  security-testing-design.md  (+5 more)
(+364 files in other folders)
