# SafeYolo - Security Proxy for AI Coding Agents
#
# Dependency management with uv:
#   uv lock              - Update lockfile
#   uv sync              - Install runtime deps
#   uv sync --group dev  - Install with dev deps
#   uv run pytest        - Run tests

[project]
name = "safeyolo-proxy"
version = "0.1.0"
description = "Egress control proxy for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Craig Balding", email = "craig@threatspotting.com" }
]

# Runtime dependencies (from requirements/base.in)
dependencies = [
    "mitmproxy>=12.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18.0",
    "yarl>=1.9.0",
    "confusable-homoglyphs>=3.3.0",
    "pydantic>=2.10.0,<2.12",
    "cryptography>=44.0.0",
    "tomlkit>=0.12.0",
]

[dependency-groups]
# Development and testing (from requirements/dev.in)
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.9.4",
]
# SBOM generation
sbom = [
    "cyclonedx-bom>=5.1.0",
]

# Note: uv.lock includes hashes by default for supply-chain security

[tool.uv]
# Override mitmproxy transitive deps to pick up security fixes while waiting
# for mitmproxy to cut a release with updated pins.
override-dependencies = [
    # CVE-2026-27205: flask XSS (mitmproxy allows 3.1.3 on main, pending release)
    "flask>=3.1.3",
    # GHSA-x3rm-644c-6f6g / GHSA-w4q6-m4r4-cjx7: Pygments ReDoS in GUID matching
    "pygments>=2.20.0",
    # GHSA-rw3j-38gj-7hm4: cryptography incomplete DNS name constraint enforcement
    "cryptography>=46.0.6",
    # GHSA-8gmr-7h4m-f8gg / GHSA-9qmg-5rj4-rhxp: pyOpenSSL DTLS + TLS bypass
    "pyopenssl>=26.0.0",
    # GHSA-7grc-rmrw-2v4j / GHSA-vf7j-cmrj-x63g: Tornado multipart DoS + cookie validation
    "tornado>=6.5.5",
]

[tool.uv.workspace]
members = [
    "cli",
    # Note: .clusterfuzzlite is NOT a workspace member.
    # It has its own lockfile for OSS-Fuzz/ClusterFuzzLite compatibility.
    "tests/blackbox/runner",
    "tests/blackbox/sinkhole",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Ruff config is in ruff.toml
