# SafeYolo - Security Proxy for AI Coding Agents
#
# Dependency management with uv:
#   uv lock              - Update lockfile
#   uv sync              - Install runtime deps
#   uv sync --group dev  - Install with dev deps
#   uv run pytest        - Run tests

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safeyolo"
version = "0.1.0"
description = "Security proxy for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Craig Balding", email = "craig@threatspotting.com" }
]
keywords = ["security", "proxy", "ai", "llm", "mitmproxy", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "mitmproxy>=12.2.2",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "yarl>=1.9.0",
    "confusable-homoglyphs>=3.3.0",
    "pydantic>=2.10.0,<2.12",
    "cryptography>=48.0.1",
    "tomlkit>=0.12.0",
]

[project.scripts]
safeyolo = "safeyolo.cli:app"

[project.urls]
Homepage = "https://github.com/craigbalding/safeyolo"
Documentation = "https://github.com/craigbalding/safeyolo#readme"
Repository = "https://github.com/craigbalding/safeyolo"
Issues = "https://github.com/craigbalding/safeyolo/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.9.4",
]
# SBOM generation
sbom = [
    "cyclonedx-bom>=5.1.0",
]

# Note: uv.lock includes hashes by default for supply-chain security

[tool.uv]
# Override mitmproxy transitive deps to pick up security fixes while waiting
# for mitmproxy to cut a release with updated pins.
override-dependencies = [
    # CVE-2026-27205: flask XSS (mitmproxy allows 3.1.3 on main, pending release)
    "flask>=3.1.3",
    # GHSA-x3rm-644c-6f6g / GHSA-w4q6-m4r4-cjx7: Pygments ReDoS in GUID matching
    "pygments>=2.20.0",
    # GHSA-537c-gmf6-5ccf: cryptography wheels included vulnerable OpenSSL
    "cryptography>=48.0.1",
    # GHSA-6v7p-g79w-8964: msgpack Unpacker reuse can trigger out-of-bounds read/crash
    "msgpack>=1.2.1",
    # GHSA-8gmr-7h4m-f8gg / GHSA-9qmg-5rj4-rhxp: pyOpenSSL DTLS + TLS bypass
    "pyopenssl>=26.0.0",
    # GHSA-7grc-rmrw-2v4j / GHSA-vf7j-cmrj-x63g: Tornado multipart DoS + cookie validation
    "tornado>=6.5.5",
]

[tool.uv.workspace]
members = [
    # Note: .clusterfuzzlite is NOT a workspace member.
    # It has its own lockfile for OSS-Fuzz/ClusterFuzzLite compatibility.
    "tests/blackbox/sinkhole",
]

[tool.hatch.build.targets.wheel]
packages = ["cli/src/safeyolo"]

[tool.hatch.build.targets.wheel.sources]
"cli/src" = ""

[tool.hatch.build]
include = [
    "cli/src/safeyolo/**/*.py",
    "cli/src/safeyolo/*.sh",
    "cli/src/safeyolo/templates/**/*.j2",
    "cli/src/safeyolo/templates/**/*.md",
    "cli/src/safeyolo/templates/**/*.yaml",
    "cli/src/safeyolo/templates/**/*.toml",
    "cli/src/safeyolo/templates/**/.env.example",
    "cli/src/safeyolo/templates/*.sudoers",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# uds-networking/ holds standalone proof-of-concept runners (sys.exit at
# module top, not pytest tests). They're invoked directly by the VPS
# smoke-test scripts. Excluded from collection so pytest doesn't import
# them and trigger their top-level exits.
norecursedirs = ["uds-networking", "__pycache__"]

# Ruff config is in ruff.toml
