[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safeyolo"
version = "0.1.0"
description = "Security proxy CLI for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Craig Balding", email = "craig@threatspotting.com" }
]
keywords = ["security", "proxy", "ai", "llm", "mitmproxy", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
safeyolo = "safeyolo.cli:app"

[project.urls]
Homepage = "https://github.com/craigbalding/safeyolo"
Documentation = "https://github.com/craigbalding/safeyolo#readme"
Repository = "https://github.com/craigbalding/safeyolo"
Issues = "https://github.com/craigbalding/safeyolo/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/safeyolo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
